--- a/src/components/nav/nav.module.sass
+++ b/src/components/nav/nav.module.sass
@@ -54,7 +54,7 @@ nav.navbar
     display: none
     +tablet
       opacity: 0
-      animation: desktopMenuEntrance 0.3s ease-in-out 0.3s forwards
+      animation: desktopMenuEntrance 0.3s ease-in-out 0.2s forwards
       display: flex
       margin-left: auto
 
