--- a/src/sections/projects/projects.module.sass
+++ b/src/sections/projects/projects.module.sass
@@ -60,6 +60,11 @@
   transition: transform 0.1s ease-in-out 
   color: $light-bg-color
   font-weight: $bold
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
+
   @include small-text
   +tablet
     width: scale(12)
